--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Riley's Agenda</title>
+        <title>Agenda</title>
         <link rel="stylesheet" href="styles/style.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta charset="utf-8">
     </head>
     <body>
@@ -45,5 +46,12 @@
 
             <div class="row-foot"></div>
         </main>
+        <footer>
+            <p>
+                Copyright &copy; Pegasus Design<br>
+                <a href="mailto:simonpegasus12@gmail.com">simonpegasus12@gmail.com</a>
+            </p>
+            <img src="https://i.imgur.com/NF2DGHI.png" height="64" width="64" alt="">
+        </footer>
     </body>
 </html>
