--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="row-content">
                 <s><span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 3 Quiz</s><br>
                 <s><span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 3 Yoga Case Study</s><br>
-                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 4 Quiz<br>
+                <s><span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 4 Quiz</s><br>
                 <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 4 Yoga Case Study
             </div>
 
