--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Composition I
             </div>
             <div class="row-content">
-                <span style="color: rgb(255, 0, 140);">Thursday, 11:59pm: </span>The Meaningful Work Experience Dropbox
+                <s><span style="color: rgb(255, 0, 140);">Thursday, 11:59pm: </span>The Meaningful Work Experience Dropbox</s>
             </div>
 
             <div class="row-head">
