--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br>
         <main>
             <div class="row-title">
-                Week 2
+                Week 3
             </div>
 
 
@@ -22,24 +22,27 @@
                 Web Development
             </div>
             <div class="row-content">
-                <s><span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 3 Quiz</s><br>
-                <s><span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 3 Yoga Case Study</s><br>
-                <s><span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 4 Quiz</s><br>
-                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 4 Yoga Case Study
+                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Quiz<br>
+                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Yoga Case Study<br>
+                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 6 Quiz<br>
+                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 6 Yoga Case Study
             </div>
 
             <div class="row-head">
                 Composition I
             </div>
             <div class="row-content">
-                <s><span style="color: rgb(255, 0, 140);">Thursday, 11:59pm: </span>The Meaningful Work Experience Dropbox</s>
+                <span style="color: rgb(255, 0, 140);">Tuesday, BY CLASS: </span>Norton Sampler Ch. 4 Quiz<br>
+                <span style="color: rgb(255, 0, 140);">Thursday, BY CLASS: </span>Paragraph Structure Video Quiz<br>
+                <span style="color: rgb(255, 0, 140);">Thursday, 11:59pm: </span>Main Point and Support - paragraph analysis<br>
+                <span style="color: rgb(255, 0, 140);">Monday, Sept. 2, 11:59pm: </span>Opening and Closing Paragraphs
             </div>
 
             <div class="row-head">
                 Music Appreciation
             </div>
             <div class="row-content">
-                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>2 - Form and Music Ensembles
+                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>3 - Cultural History of Music
             </div>
 
 
