--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             </div>
             <div class="row-content">
                 <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Quiz<br>
-                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Yoga Case Study<br>
-                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 6 Quiz<br>
-                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 6 Yoga Case Study
+                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Discussion Project Plan
             </div>
 
             <div class="row-head">
