--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Composition I
             </div>
             <div class="row-content">
-                <span style="color: rgb(255, 0, 140);">Tuesday, BY CLASS: </span>Norton Sampler Ch. 4 Quiz<br>
+                <s><span style="color: rgb(255, 0, 140);">Tuesday, BY CLASS: </span>Norton Sampler Ch. 4 Quiz</s><br>
                 <span style="color: rgb(255, 0, 140);">Thursday, BY CLASS: </span>Paragraph Structure Video Quiz<br>
                 <span style="color: rgb(255, 0, 140);">Thursday, 11:59pm: </span>Main Point and Support - paragraph analysis<br>
                 <span style="color: rgb(255, 0, 140);">Monday, Sept. 2, 11:59pm: </span>Opening and Closing Paragraphs
