--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="row-content">
                 <s><span style="color: rgb(255, 0, 140);">Tuesday, BY CLASS: </span>Norton Sampler Ch. 4 Quiz</s><br>
                 <s><span style="color: rgb(255, 0, 140);">Thursday, BY CLASS: </span>Paragraph Structure Video Quiz</s><br>
-                <span style="color: rgb(255, 0, 140);">Thursday, 11:59pm: </span>Main Point and Support - paragraph analysis<br>
+                <s><span style="color: rgb(255, 0, 140);">Thursday, 11:59pm: </span>Main Point and Support - paragraph analysis</s><br>
                 <span style="color: rgb(255, 0, 140);">Monday, Sept. 2, 11:59pm: </span>Opening and Closing Paragraphs
             </div>
 
