--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 Web Development
             </div>
             <div class="row-content">
-                <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Quiz<br>
+                <s><span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Quiz</s><br>
                 <span style="color: rgb(255, 0, 140);">Sunday, 11:59pm: </span>Chapter 5 Discussion Project Plan
             </div>
 
